# GrowwPulse

./: .env.example  .gitattributes  .gitignore  README.md  config.yaml  debug_mcp.py  demo.py  mcp_servers.json  output.txt  pyproject.toml  save_sample_data.py  test_mcp.py
data/: actual_reviews.json  frontend_output.json  normalized_reviews.json
data/receipts/: .gitkeep  2026-W24_themes.json  groww_2026-W24.json
design/luminous_fintech/: DESIGN.md
design/review_explorer/: review_explorer.html
design/weekly_pulse_dashboard/: weekly_pulse_dashboard.html
docs/: architecture.md  edge-cases.md  implementation-plan.md  problemStatement.md  problemStatement.txt
frontend-next/: package-lock.json  package.json
frontend-next/app/: globals.css  layout.js  page.js  page.module.css
frontend-next/components/: Sidebar.js  Sidebar.module.css  TopNav.js  TopNav.module.css
frontend-next/components/explorer/: ReviewExplorerPanel.js  ReviewExplorerPanel.module.css
frontend-next/components/weekly-pulse/: HeroStats.js  (+9 more)
groww_pulse/: __init__.py  __main__.py  clustering.py  config.py  delivery.py  ingestion.py  pii.py  receipts.py  renderer.py  summarizer.py
groww_pulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_servers/: __init__.py
mcp_servers/playstore_reviews/: __init__.py  __main__.py  scraper.py  server.py
tests/: test_clustering.py  test_config.py  test_delivery.py  test_error_handling.py  test_idempotency.py  test_ingestion.py  test_pii.py  test_receipts.py  test_renderer.py  test_scraper.py  test_summarizer.py
(+1 files in other folders)
